--- a/port.yml
+++ b/port.yml
@@ -3,7 +3,7 @@
 - identifier: "Checkoutservice"
   blueprint: service
   properties:
-    type: "frontend1"
-    lifecycle: "Experimental"
+    type: "frontend"
+    lifecycle: "Experimenta"
   relations:
     domain: "shipping"
