--- a/port.yml
+++ b/port.yml
@@ -1,7 +1,6 @@
 # enrichService.yml
 
-- identifier: "Checkoutservice"
-  blueprint: service
+-  blueprint: service
   properties:
     type: "frontend22"
-    lifecycle: "Experimentcheckout24"
+    lifecycle: "Experimentcheckout25"
