--- a/port.yml
+++ b/port.yml
@@ -7,4 +7,4 @@
     lifecycle: "Experimentcheckout20"
     team: [new team]
     language: java
-    tier: "Misssion Critical"
+    tier: "Mission Critical"
