--- a/port.yml
+++ b/port.yml
@@ -1,10 +1,12 @@
 # enrichService.yml
 
-- identifier: "kubernetes"
+- identifier: "Checkoutservice"
   blueprint: service
   properties:
     type: "frontend20"
-    lifecycle: "Experimentcheckout20"
+    lifecycle: "Experimentcheckout21"
     team: [port_admins]
     language: java
     tier: "Mission Critical"
+  relations:
+  impactedcal: core3_service5
