--- a/port.yml
+++ b/port.yml
@@ -1,13 +1,10 @@
 # enrichService.yml
 
-- identifier: "Checkoutservice"
-  blueprint: service
+- identifier: amwins-ascs-amlink-client-api
+  title: ASCS Amlink Client API
+  blueprint: repo
+  icon: CSharp
   properties:
-    type: "frontend12"
-    lifecycle: "Experimentcheckout24"
-    team: [port_admins]
-    language: java
-    url: "https://google.com"
-    tier: "Mission Critical"
+    company: Amwins
   relations:
-    impactedcal: core3_service6
+    service: Amwins/ascs
